# BuyMe-Project

./: README.txt  base_page.py  config.json  homepage.py  logger_file.py  pyproject.toml  test_BuyMe.py
allure-report/: 22b68e9f-9069-4686-b5b2-7dbabb04554b-container.json  3db1f5ae-a3e6-4814-8447-da235360eb8c-container.json  3db887bf-2ab1-434b-81c5-ef0bbaa49ca1-result.json  5a351397-d692-4f7a-a6f5-c716a1e6ad21-result.json  6867978e-f879-497b-8e0b-0f60f46454e1-container.json  7f6546aa-d695-4770-8f16-4c7e0cc4c9c3-container.json  845ab9f5-2bf0-4de6-92be-81dd5b1d2e51-result.json  eafc083f-b1b2-4042-aa2a-c645e1f57711-result.json
allure-report/export/: influxDbData.txt
